--- a/abc.css
+++ b/abc.css
@@ -64,14 +64,20 @@ span i {
     place-items: center;
 }
 
-/*img {
+.left-arrow {
     position: absolute;
-    left: 0px;
-    top: 40px;
-    z-index: -1;
-    height: 799px;
-    width: 100%;
-}*/
+    top: 372px;
+    left: 42px;
+    color:white;
+    font-size: 26px;
+}
+.right-arrow {
+    position: absolute;
+    top: 372px;
+    right: 42px;
+    color: white;
+    font-size: 26px;
+}
 .text1{
     position: absolute;
     top:20px;
@@ -114,7 +120,7 @@ span i {
 .banner-center {
     width: 1170px;
     position: absolute;
-    top: 368px;
+    top: 373px;
     left: 586px;
     transform: translate(-50%,-50%);
     color: white;
@@ -124,7 +130,7 @@ span i {
 }
 .big {
     font-size: 42px;
-    font-weight: 800;
+    font-weight: 900;
     margin-top: 5px;
 }
 button {
@@ -147,5 +153,21 @@ button {
     text-align: center;
 }
 
+#henry {
+    margin-top: 18px;
+    font-size: 14px;
+    font-family:'Montserrat', sans-serif;
+    color: white;
+    font-weight: bold; 
+    letter-spacing:1px;
+}
+
+.date-comment {
+    font-size: 12px;
+    font-family:'Montserrat', sans-serif;
+    color: rgb(190,190,190);
+    letter-spacing:1px;
+    font-weight:550;
+}
 
 
