--- a/abc.css
+++ b/abc.css
@@ -130,7 +130,7 @@ span i {
 .banner-center {
     width: 1170px;
     position: absolute;
-    top: 390px;
+    top: 391px;
     left: 586px;
     transform: translate(-50%,-50%);
     color: white;
@@ -146,15 +146,16 @@ span i {
 button {
     background-color: rgb(48, 63, 159);
     border-style: none;
-    padding: 12px 30px;
+    padding: 12px 27px;
     font-size: 18px;
     color: #ffffff;
     border-radius: 25px;
-    margin-top: 1.75rem;
+    margin-top: 28px;
+    letter-spacing: 1px;
 }
 .banner-bottom {
     position: absolute;
-    top: 646px;
+    top: 663px;
     left: 585px;
     transform: translate(-50%,-50%);
     color: white;
@@ -166,8 +167,9 @@ button {
     font-size: 14px;
     font-family:'Montserrat', sans-serif;
     color: white;
-    font-weight: bold; 
+    font-weight: 700; 
     letter-spacing:1px;
+    font-stretch: expanded;
 }
 .date-comment {
     font-size: 12px;
