--- a/abc.css
+++ b/abc.css
@@ -194,6 +194,7 @@ ul {
 }
 #henry {
     margin-top: 18px;
+    margin-right: 2px;
     font-size: 14px;
     font-family:'Montserrat', sans-serif;
     color: white;
@@ -208,15 +209,41 @@ ul {
     letter-spacing:1px;
     font-weight:550;
     margin-top: 9px;
-}
+    margin-left: 4px;
+}/*margin-right: 2px; margin-left:10px;
+margin-right: 3px;*/
 .comment{
+    display: inline-block;
     font-size: 12px;
     font-family:'Montserrat', sans-serif;
     color: rgb(190,190,190);
     letter-spacing:1px;
     font-weight:550;
-    margin-top: 30px;
+    margin-top: 31px;
+    margin-right: 27px;
 }
+.comment-icon {
+    margin-left:4px;
+    font-size: 16px;
+    margin-right:3px;
+}
+.like {
+    display: inline-block;
+    font-size: 12px;
+    font-family:'Montserrat', sans-serif;
+    color: rgb(190,190,190);
+    letter-spacing:1px;
+    font-weight:550;
+    margin-top: 31px;
+    margin-right:8px;
+    
+}
+.like-icon {
+    font-size: 14px;
+}
+
+/*font-size: 16px;margin-right: 3px; color: rgb(190,190,190);*/
+
 /*
 .sort-bar {
     position: absolute;
