--- a/abc.css
+++ b/abc.css
@@ -55,7 +55,7 @@ body {
     background-position: center;
     background-size: cover;
     z-index:-1;
-    height: 799px;
+    height: 800px;
     display: grid;
     place-items: center;
 }
@@ -78,7 +78,7 @@ body {
     height: 799px;
 }
 .banner-top {
-    margin-top: 20px;
+    margin-top: 19px;
 }
 #top-left {
     display: inline-block;
@@ -89,7 +89,7 @@ body {
     font-weight: 700;
     letter-spacing: 2px;
 }
-ul {
+.nav-list {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -187,7 +187,7 @@ ul {
     letter-spacing: 1px;
 }
 .banner-bottom {
-    margin-top: 78px;
+    margin-top: 79px;
     color: white;
     font-family: "Montserrat", sans-serif;
     text-align: center;
@@ -244,21 +244,61 @@ margin-right: 3px;*/
 
 /*font-size: 16px;margin-right: 3px; color: rgb(190,190,190);*/
 
-/*
+
 .sort-bar {
-    position: absolute;
-    top: 839px;
     width:100%;
     height: 60px;
-    background-color: rgb(116, 15, 15);
+    background-color: rgb(255, 255, 255);
     display: grid;
     place-items: center;
+    border-bottom: 1px solid rgb(221, 221, 221);
     
 }
 .sort-bar-center {
     width: 1170px;
     height: 60px;
-    background-color: rgb(222, 109, 109);
-    
+    background-color: rgb(255, 255, 255);    
 }
-*/
+.filter-list{
+    display: inline-block;
+    list-style-type: none;
+    margin: 16px 0px 0px 0px;
+    padding: 0;
+}
+.sort{
+    display:inline-block;
+    font-family: "Montserrat", sans-serif;
+    color: black;
+    font-size: 12px;
+    font-weight: bold;
+}
+.all{
+    display: inline-block;
+    margin-left: 16px;
+    margin-right: 1px;
+    color: rgb(63,81,181);
+    border: 1px solid rgb(63,81,181);
+    font-size: 12px;
+    border-radius: 25px;
+    padding: 8px 30px 5px 26px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+}
+.filter{
+    display: inline-block;
+    margin-left: 11px;
+    color: black;
+    font-size: 12px;
+    background-color: rgb(245,245,245);
+    padding: 9px 25px 7px 29px;
+    border-radius: 25px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    letter-spacing: 0.2px;
+}
+.main-body {
+    width:100%;
+    height: 2337px;
+    background-color: rgb(245,245,245);
+}
+
