--- a/abc.css
+++ b/abc.css
@@ -124,7 +124,6 @@ body {
 #middle {
     display: inline-block;
     margin-top: 6px;
-    float: center;
 }
 .li {
     display: inline;
@@ -219,13 +218,14 @@ margin-right: 3px;*/
     color: rgb(190,190,190);
     letter-spacing:1px;
     font-weight:550;
-    margin-top: 31px;
+    margin-top: 33px;
     margin-right: 27px;
 }
 .comment-icon {
     margin-left:4px;
-    font-size: 16px;
+    font-size: 18px;
     margin-right:3px;
+    vertical-align: middle;
 }
 .like {
     display: inline-block;
@@ -234,7 +234,7 @@ margin-right: 3px;*/
     color: rgb(190,190,190);
     letter-spacing:1px;
     font-weight:550;
-    margin-top: 31px;
+    margin-top: 33px;
     margin-right:8px;
     
 }
@@ -300,5 +300,79 @@ margin-right: 3px;*/
     width:100%;
     height: 2337px;
     background-color: rgb(245,245,245);
+    display: grid;
+    place-items: center;
 }
 
+.text2 {
+    width: 1171px;
+    height: 2307px;
+    margin-top: 30px;
+}
+
+.main-left {
+    width: 822px;
+    height: 100%;
+    float: left;
+}
+
+.main-right {
+    width: 310px;
+    height: 100%;
+    float: right;
+}
+
+.card1{
+    height: 621px;
+    width: 100%;
+}
+
+.card1-image{
+    background-image: url("img7.jpg");
+    background-position: center;
+    height: 420px;
+    width: 100%;
+}
+
+#play-button{
+    margin-top: 185px;
+    margin-left: 387px;
+}
+.lifestyle {
+    width: 100%;
+    margin-top: 155px;
+}
+
+.lifestyle-left {
+    float: left;
+    margin-left: 20px;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-size:12px;
+}
+
+.lifestyle-right {
+    float: right;
+    color: white;
+    margin-right:20px;
+    margin-top:-2px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 13px;
+
+}
+
+.lifestyle-right-comment {
+    display: inline-block;
+}
+.comment-icon1{
+    font-size: 18px;
+    vertical-align:sub;
+    margin-right:2px;
+}
+.lifestyle-right-like {
+    display: inline-block;
+}
+.like-icon1{
+    margin-left:17px;
+    font-size: 16px;
+}
